[package]
name = "DisCrasher"
version = "2.1.0"
authors = ["aldas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
